searcing meals second addition

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
+    <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           
@@ -34,12 +35,13 @@
         </div>
       </nav>
 
-
+<!-- searching -->
     <div id="search-box">
         <input type="text"  id="food-input" placeholder="Search your food">
         <button id="search-btn">search</button>
     </div>
      
+    <!-- food container -->
 <main>
       <div id="ingredient"></div>
  
