--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light " id="nav">
         <div class="container-fluid">
           
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <img src="images/logo.jpg" alt="">
-          <div class="collapse navbar-collapse d-lg-flex flex-row-reverse" id="navbarNav">
+          <div class="collapse navbar-collapse d-lg-flex flex-row-reverse">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -35,14 +37,16 @@
         </div>
       </nav>
 
-<!-- searching -->
-    <div id="search-box">
+
+   
+       <!-- searching -->
+      <div id="search-box">
         <input type="text"  id="food-input" placeholder="Search your food">
         <button id="search-btn">search</button>
     </div>
      
     <!-- food container -->
-<main>
+<main class="container">
       <div id="ingredient"></div>
  
       <div class="container" id="food-list"></div>
