--- a/index.html
+++ b/index.html
@@ -47,8 +47,16 @@
      
     <!-- food container -->
 <main class="container">
-      <div id="ingredient"></div>
- 
+      <div id="meal-details">
+        <img src="" id="meal-img" alt="">
+        <h3 id="name"></h3>
+        <div id="all-ul">
+        <ul id="ingredients"></ul>
+        <ul id="measure"></ul>
+        </div>
+      </div>
+      
+ <!-- foods template -->
       <div class="container" id="food-list"></div>
 </main>
 
